# ATM_caseiro

./: .gitignore  .pre-commit-config.yaml  docker-compose.yml  package-lock.json  package.json  pyproject.toml
services/service_account/: Dockerfile  requirements.txt
services/service_auth/: Dockerfile  requirements.txt
